# stacksniff

./: .gitignore  INTERNALS.md  README.md  pyproject.toml
src/stacksniff/: __init__.py  cli.py  fingerprints.py  models.py  scanner.py  updater.py  updater_seclists.py
src/stacksniff/analyzers/: __init__.py  api_detector.py  fingerprint_matcher.py
src/stacksniff/collectors/: __init__.py  base.py  cookie_collector.py  domain_mapper.py  framework_prober.py  header_collector.py  html_collector.py  js_collector.py  js_static_collector.py  network_collector.py
tests/: __init__.py  test_api_detector.py  test_domain_mapper.py  test_fingerprint_matcher.py  test_framework_prober.py  test_js_static_collector.py  test_network_collector.py  test_openapi_spec.py  test_scanner.py  test_updater.py  test_updater_seclists.py
