[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacksniff"
version = "0.1.0"
description = "Detect web technology stacks from URLs — servers, frameworks, CDNs, CMS, JS libraries, and API endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "stacksniff contributors"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "httpx>=0.27.0",
    "playwright>=1.42.0",
    "pyyaml>=6.0.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
    "respx>=0.21.0",
]

[project.scripts]
stacksniff = "stacksniff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/stacksniff"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
